--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,7 +43,7 @@ dependencies {
 
 application {
     // Define the main class for the application.
-    mainClass = 'cs2263_hw03.App'
+    mainClass = 'cs2263_hw03.CourseProcessor'
 }
 
 tasks.named('test') {
